--- a/main.html
+++ b/main.html
@@ -8,6 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<main class="container">
+		<img src="https://as1.ftcdn.net/v2/jpg/01/04/30/14/1000_F_104301472_pyVtIxV772wopi6o6smi4Ulqpe7lm8bS.jpg" alt="image">
+		<h1>Pricing Card</h1>
+		<p>Price: Rs.200</p>
+		<p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+		<button>Buy Now</button>
+	</main>
     <script type="text/javascript" src="./script.js">
 </script>
 
